Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "baileys",
+  "name": "@brayanofc-li/baileysx",
   "type": "module",
   "version": "7.0.0-rc.6",
   "description": "A WebSockets library for interacting with WhatsApp Web",
@@ -7,9 +7,9 @@
     "whatsapp",
     "automation"
   ],
-  "homepage": "https://github.com/WhiskeySockets/Baileys/",
+  "homepage": "https://github.com/BrayanOFC-Li/baileysx/",
   "repository": {
-    "url": "git@github.com:WhiskeySockets/Baileys.git"
+    "url": "git@github.com:BrayanOFC-Li/baileysx.git"
   },
   "license": "MIT",
   "author": "Rajeh Taher",
