--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -1,9 +1,9 @@
-name: Publish Release
+name: Publish BrayanOFC-Li Baileys-MB
 
 on:
   push:
     tags:
-      - "v*"
+      - 'v*'
 
 permissions: write-all
 
@@ -16,74 +16,35 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Fetching tags
-        run: git fetch --tags -f || true
-
       - name: Setup Node
         uses: actions/setup-node@v3.6.0
         with:
           node-version: 20.x
-          registry-url: "https://registry.npmjs.org"
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          registry-url: 'https://registry.npmjs.org'
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
-
-      - uses: actions/cache@v3
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+      - name: Enable Corepack and Yarn
+        run: |
+          corepack enable
+          corepack prepare yarn@4.x --activate
 
       - name: Install Dependencies
-        run: yarn
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: yarn install --immutable
 
-      - name: Publish in NPM (as `baileys`)
-        run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      
-      - name: Publish in NPM (whiskeysockets scope)
+      - name: Publish in NPM (@brayanofc-li scope)
         run: |
-          npx json -I -f package.json -e "this.name='@whiskeysockets/baileys'"
+          npx json -I -f package.json -e "this.name='@brayanofc-li/baileys-md'"
           npm publish --access public --//registry.npmjs.org/:_authToken=$NPM_TOKEN
-          npx json -I -f package.json -e "this.name='baileys'"
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Generate Changelog
-        id: generate_changelog
-        run: |
-          changelog=$(npm run changelog:last --silent)
-          echo "changelog<<EOF" >> $GITHUB_OUTPUT
-          echo "${changelog}" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-
-      - name: Make Package
-        run: npm pack
-
-      - name: Rename Pack
-        run: mv *.tgz baileys.tgz
-
-      - name: Create Release
+      - name: Create GitHub Release
         uses: meeDamian/github-release@2.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref }}
           commitish: ${{ github.sha }}
           name: ${{ github.ref_name }}
-          body: ${{ steps.generate_changelog.outputs.changelog }}
+          body: "Publicación automática de @brayanofc-li/baileys-md"
           draft: false
           prerelease: false
-          files: >
-            baileys.tgz
-          gzip: folders
-          allow_override: true
