Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "baileysx",
+  "name": "@brayanofc-li/baileysx",
   "version": "6.7.18",
   "description": "version personal BrayanOFC-Li",
   "keywords": [
