--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: mshick/add-pr-comment@v2
         with:
-          repo-token: ${{ secrets.PERSONAL_TOKEN}}
+          repo-token: ${{ secrets.NPM_TOKEN}}
           message-id: pr-test
           message: |
             Thanks for your contribution.
@@ -30,7 +30,4 @@ jobs:
             To test this PR you can run the following command below:
             ```
             # NPM
-            npm install @whiskeysockets/baileys@${{ github.event.pull_request.head.repo.full_name }}#${{ github.event.pull_request.head.ref }}
-            # YARN v2
-            yarn add @whiskeysockets/baileys@${{ github.event.pull_request.head.repo.full_name }}#${{ github.event.pull_request.head.ref }}
-            ```
+            npm install @brayanofc-li/baileysx@${{ github.event.pull_request.head.repo.full_name }}#${{ github.event.pull_request.head.ref }}
