--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -1,4 +1,4 @@
-name: Publish BrayanOFC-Li baileysx
+name: Publish @brayanofc-li/baileysx
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Node
-        uses: actions/setup-node@v3.6.0
+        uses: actions/setup-node@v3
         with:
           node-version: 20.x
           registry-url: 'https://registry.npmjs.org'
@@ -30,12 +30,10 @@ jobs:
       - name: Install Dependencies
         run: yarn install --immutable
 
-      - name: Publish in NPM (@brayanofc-li scope)
-        run: |
-          npx json -I -f package.json -e "this.name='@brayanofc-li/baileysx'"
-          npm publish --access public --//registry.npmjs.org/:_authToken=$NPM_TOKEN
+      - name: Publish to NPM
+        run: npm publish --access public
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create GitHub Release
         uses: meeDamian/github-release@2.0
